fix: title on mobile

--- a/pages/blog/markdown-content.module.css
+++ b/pages/blog/markdown-content.module.css
@@ -33,3 +33,12 @@
    @apply p-1;
    @apply rounded;
 }
+
+@media screen and (max-width: 768px) {
+   .markdown p,
+   .markdown ul,
+   .markdown ol,
+   .markdown blockquote .markdown code {
+      font-size: 12px;
+   }
+}
